--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,47 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #F1F1F1;
+  background-color: #eee;
+}
+
+.page {
+  display: flex;
+  max-width: 1300px;
+  margin: auto;
+}
+
+.nav-bar {
+  flex: 1;
+  border: 1px solid rgb(57, 60, 61);
+  background-color: white;
+  padding: 25px 0px;
+  margin-left: 10px;
+}
+
+.nav-menu ul, .right-bar ul {
+  list-style: none;
+  padding-left: 25px;
+}
+
+.main-container {
+  flex: 3;
+  border: 1px solid black;
+  background-color: white;
+  /* margin: 0px 20px; */
+  padding: 25px;
+  margin: 0px 10px;
+}
+
+.right-bar {
+  flex: 1;
+  border: 1px solid black;
+  background: white;
+  padding: 25px 0px;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 500px){
+  .page {
+    flex-direction: column;
+  }
 }
