--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,11 @@ body {
 
 .nav-bar {
   flex: 1;
-  border: 1px solid rgb(57, 60, 61);
+  border: 1px solid #d9d9d9;
   background-color: white;
   padding: 25px 0px;
   margin-left: 10px;
+  border-radius: 3px;
 }
 
 .nav-menu ul, .right-bar ul {
@@ -28,21 +29,27 @@ body {
   padding-left: 25px;
 }
 
+.nav-menu a, .right-bar a {
+    text-decoration: none;
+}
+
 .main-container {
   flex: 3;
-  border: 1px solid black;
+  border: 1px solid #d9d9d9;
   background-color: white;
   /* margin: 0px 20px; */
   padding: 25px;
   margin: 0px 10px;
+  border-radius: 3px;
 }
 
 .right-bar {
   flex: 1;
-  border: 1px solid black;
+  border: 1px solid #d9d9d9;
   background: white;
   padding: 25px 0px;
   margin-right: 10px;
+  border-radius: 3px;
 }
 
 @media screen and (max-width: 500px){
