--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,31 @@ body {
   margin: auto;
 }
 
+.header-bar-container {
+  border-bottom: 1px solid black;
+  margin-bottom: 50px;
+  padding: 10px 0px;
+  color: white;
+  background-color: rgb(57, 60, 61);
+}
+
+.header-bar {
+  max-width: 1280px;
+  margin: auto;
+}
+
+.header-bar-container .name {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  display: inline;
+}
+
+.header-bar-container .button {
+  display: inline;
+  float: right;
+}
+
 .nav-bar {
   flex: 1;
   border: 1px solid #d9d9d9;
@@ -31,6 +56,11 @@ body {
 
 .nav-menu a, .right-bar a {
     text-decoration: none;
+}
+
+.dashboard {
+  max-width: 1240px;
+  margin: auto;
 }
 
 .main-container {
@@ -50,6 +80,24 @@ body {
   padding: 25px 0px;
   margin-right: 10px;
   border-radius: 3px;
+}
+
+.admin-page h2, .admin-page h3 {
+  margin-bottom: 15px;
+}
+
+.product-description textarea, .product-breakdown textarea {
+  margin-bottom: 10px;
+  height: 75px;
+  width: 500px;
+}
+
+.product-sport {
+  margin-bottom: 10px;
+}
+
+.product-sport label {
+  margin-right: 15px;
 }
 
 @media screen and (max-width: 500px){
