--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ body {
   padding: 25px 0px;
   margin-left: 10px;
   border-radius: 3px;
+  margin-bottom: 50px;
 }
 
 .nav-menu ul, .right-bar ul {
@@ -71,6 +72,7 @@ body {
   padding: 25px;
   margin: 0px 10px;
   border-radius: 3px;
+  margin-bottom: 50px;
 }
 
 .right-bar {
@@ -80,6 +82,7 @@ body {
   padding: 25px 0px;
   margin-right: 10px;
   border-radius: 3px;
+  margin-bottom: 50px;
 }
 
 .admin-page h2, .admin-page h3 {
@@ -98,6 +101,14 @@ body {
 
 .product-sport label {
   margin-right: 15px;
+}
+
+.admin-product-info-container {
+  margin: 10px 0px;
+  padding: 10px 15px;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  list-style: none;
 }
 
 @media screen and (max-width: 500px){
