--- a/src/index.css
+++ b/src/index.css
@@ -111,8 +111,117 @@ body {
   list-style: none;
 }
 
-@media screen and (max-width: 500px){
+/* styling for listings of products by sport and year */
+/* ex: Baseball 2019 - product listings */
+
+.product-by-year-info-container {
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  height: 140px;
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.product-by-year-main-title {
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.product-by-year-info-container img {
+  max-height: 100px;
+  padding: 20px 0px;
+  width: auto;
+}
+
+.product-by-year-image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-by-year-info-container li {
+  margin: 10px;
+}
+
+.product-by-year-info-container ul {
+  margin: 10px 0px;
+  padding: 0px;
+  list-style: none;
+  flex: 3;
+}
+
+.product-by-year-name {
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.product-by-year-release-date {
+  font-size: 15px;
+}
+
+/* product-page.js styling */
+
+.product-page-main {
+  padding: 20px;
+}
+
+.product-page-product-name {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.product-page-image-container {
+  flex: 1;
+  max-width: 300px;
+}
+
+.product-page-image-container img {
+  width: 100%;
+}
+
+.product-page-product-rating-data {
+  padding: 15px;
+  margin-left: 20px;
+  flex: 1;
+  vertical-align: top;
+  max-width: 350px;
+}
+
+.product-page-product-rating-data {
+  list-style: none;
+}
+
+.product-page-product-breakdown h3, .product-page-product-rating-data h3 {
+  margin-bottom: 15px;
+}
+
+.product-page-product-breakdown-text {
+  line-height: 22px;
+}
+
+.product-page-image-breakdown-container {
+  display: flex;
+  margin-bottom: 25px;
+}
+
+.product-page-main hr {
+  margin: 25px 0px;
+  color: #d9d9d9;
+}
+
+@media screen and (max-width: 600px){
   .page {
     flex-direction: column;
+  }
+
+  .product-by-year-name {
+    font-size: 16px;
+  }
+
+  .product-page-image-breakdown-container {
+    flex-direction: column; 
   }
 }
